# r2simv9

./: README.md
src/arena_viz/: CMakeLists.txt  package.xml
src/arena_viz/launch/: arena_sim.launch.py
src/arena_viz/models/DDRena/: DDRena.urdf  arenew.sdf  model.config
src/arena_viz/models/DDRena/meshes/: 2007.stl  6002.stl  Acrylic_Fence.stl  Spearhead_Rack.stl  Tic-Tac-Toe_Base.stl  Tic-Tac-Toe_Top.stl  base_link.stl  ramp2.stl
src/arena_viz/rviz/: arena.rviz
src/arena_viz/scripts/: fix_urdf.py  sdf_to_urdf.py
src/arena_viz/worlds/: arena.world
src/r2krishna/: CMakeLists.txt  package.xml
src/r2krishna/config/: joint_names_Avengers Assemble URDF.yaml  view_robot.rviz
src/r2krishna/launch/: display.launch  gazebo.launch  simulation.launch.py
src/r2krishna/meshes/: left_1.STL  left_2.STL  left_rover_side.STL  right_1.STL  right_2.STL  right_rover_side.STL  tri1_left.STL  tri1_right.STL  tri1_top.STL  tri2_left.STL  tri2_right.STL  tri2_top.STL  tri_1.STL  tri_2.STL
src/r2krishna/models/red_block/: model.config  model.sdf
src/r2krishna/scripts/: mf.py  vision_tracker.py
src/r2krishna/scripts/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/r2krishna/urdf/: DDRena.sdf  DDRena.urdf  R2krishna.csv  auto_3.urdf  model.config  r2krishna.urdf
src/r2krishna/urdf/meshes/: 4008.stl  Staff_Rack.stl  base_link.stl
